* Moved monkey patching of ZipFile to not interfere with setup.py install (thanks to
  Konstantin Zemlyak).

- 0.4.1
* Some minor fixes.
* Temporary use distutils in setup.py to overcome issues with installation.

- 0.4.0
* Add functionality to search for doc files and put them into %doc.
* Enable searching archive for files according to given re.
* Extracted archive handling to a class.
* Archives can now be searched for files by full path (internal thing only).

- 0.3.1
* Put the 'Created ...' header in templates - taking some credits here ;) (Added version file for that.)
* Some minor fixes in templates (no functionality affected).

- 0.3.0
* More tests, mainly for PyPI functionality (mocked, do not need net connection).
* The -n parameter is no longer required for local sources.
* Choosing templates now work (either relative or absolute path).

- 0.2.0
* Minor bug fixes.
* Support multiple python versions in one template (e.g. %{?with_python3}).
* Check that the package exists on PyPI when getting source.

- 0.1.0
* Initial release.